[package]
name = "proof"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# op-succinct-host-utils = { git = "https://github.com/succinctlabs/op-succinct", commit = "3bee72e6ce2405aed91389a9ceb2d8bec5237774"}
# op-succinct-client-utils = { git = "https://github.com/succinctlabs/op-succinct", commit = "3bee72e6ce2405aed91389a9ceb2d8bec5237774"}
# op-succinct-build-utils = { git = "https://github.com/succinctlabs/op-succinct", commit = "3bee72e6ce2405aed91389a9ceb2d8bec5237774"}

# # op-alloy-consensus.workspace = true
# # op-alloy-genesis.workspace = true
# # alloy-consensus.workspace = true
# # alloy-eips.workspace = true

# # cfg-if.workspace = true
# # serde_json.workspace = true
# # log.workspace = true
# # tracing.workspace = true
# # anyhow.workspace = true


# # # sp1
# # sp1-zkvm.workspace = true

# # # kona
# # kona-executor.workspace = true
# # kona-derive.workspace = true
# # kona-proof.workspace = true

# # # `tracing-subscriber` feature dependencies
# # tracing-subscriber = { workspace = true, optional = true }

# [lints]
# workspace = true
